--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "vcl-parser",
   "version": "1.0.0-alpha1",
   "description": "Attempt to learn PEG",
+  "main" : "parser.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aintgoin2goa/vcl-peg.git"
+  },
+  "scripts" : {
+    "test" : "make test",
+    "prepublish" : "make parser"
   },
   "author": "paul.wilson66@gmail.com",
   "license": "ISC",
@@ -12,11 +17,9 @@
     "url": "https://github.com/aintgoin2goa/vcl-peg/issues"
   },
   "homepage": "https://github.com/aintgoin2goa/vcl-peg#readme",
-  "dependencies": {
+  "devDependencies": {
+    "minimist": "^1.2.0",
     "colors": "^1.1.2",
     "pegjs": "^0.9.0"
-  },
-  "devDependencies": {
-    "minimist": "^1.2.0"
   }
 }
